--- a/index.html
+++ b/index.html
@@ -52,26 +52,26 @@
     <div class="offcanves-menu-overlay"></div>
     <div class="off-canvas-menu">
         <span class="menu-close">
-           <i class="fa fa-close"></i>
+           <i class="fas fa-times"></i>
        </span>
         <div class="menu-item-wrap">
             <div class="menu-item-inner">
                 <ul>
-                    <li><a class="smoth-scroll" href="index.html#home">Home</a></li>
-                    <li><a class="smoth-scroll" href="index.html#about">About me</a></li>
-                    <li><a class="smoth-scroll" href="index.html#work">Portfolio</a></li>
-                    <li><a class="smoth-scroll" href="index.html#testimonial">Testimonial</a></li>
-                    <li><a class="smoth-scroll" href="index.html#contact">Contact</a></li>
+                    <li><a class="smoth-scroll" href="#home">Home</a></li>
+                    <li><a class="smoth-scroll" href="#about">About me</a></li>
+                    <li><a class="smoth-scroll" href="#work">Portfolio</a></li>
+                    <li><a class="smoth-scroll" href="#testimonial">Testimonial</a></li>
+                    <li><a class="smoth-scroll" href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
         <div class="menu-bottom-section">
             <div class="menu-social-links">
                 <ul>
-                    <li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="index.html#"><i class="fa fa-dribbble"></i></a></li>
+                    <li><a href="http://stackoverflow.com/users/8864026/danel-ceresa"><i class="fab fa-stack-overflow"></i></a></li>
+                    <li><a href="http://github.com/aserec"><i class="fab fa-github"></i></a></li>
+                    <li><a href="http://www.linkedin.com/in/danel-ceresa"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="mailto:dceresa1988@gmail.com"><i class="far fa-envelope"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -84,12 +84,6 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-6">
-                        <!-- START LOGO DESIGN AREA -->
-                        <div class="logo">
-                            <a href="index.html">
-                                <p>Z.</p>
-                            </a>
-                        </div>
                         <!-- END LOGO DESIGN AREA -->
                     </div>
                     <div class="col-xs-6 text-right">
@@ -104,19 +98,20 @@
                 </div>
             </div>
         </div>
-        <div class="welcome-image-area" data-stellar-background-ratio="0.6" style="background-position: 0% 1261.6px;">
+        <div class="welcome-image-area">
             <div class="display-table">
                 <div class="display-table-cell">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="header-text text-center">
-                                    <h3>Hello There!</h3>
+                                    <h3>Danel Ceresa</h3>
                                     <h2 class="cd-headline clip is-full-width">
-                                        <span class="cd-words-wrapper" style="width: 327px;">
-                                            <b class="is-visible">I'm Micle Jonson</b>
-                                            <b class="is-hidden">I'm a Designer</b>
-                                            <b class="is-hidden">Lives in Australia</b>
+                                        <span class="cd-words-wrapper" >
+                                            <b class="is-visible">I'm a Mobile Developer</b>
+                                            <b class="is-hidden">I'm a Web Developer</b>
+                                            <b class="is-hidden">I'm a Digital Nomad</b>
+                                            <b class="is-hidden">I'm an All-Terrain Man</b>
                                         </span>
                                     </h2>
                                     <div class="home-arrow-down">
@@ -152,7 +147,7 @@
                 </div>
                 <div class="col-md-5">
                     <div class="about-me-left wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-                        <img src="files/me.jpg" alt="">
+                        <img src="files/images/me.png" alt="">
                     </div>
                 </div>
             </div>
@@ -489,11 +484,6 @@
                         <h2>For project enquires <br> or say ‘Hello’ – hey@websitename.com</h2>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <div class="footer-text">
-                        <p>©Copyright Zenon. All-Right Reserved</p>
-                    </div>
-                </div>
             </div>
         </div>
     </footer>
@@ -521,7 +511,6 @@
     <script src="files/jquery.stellar.min.js.descarga"></script>
     <!-- ANIMATION JS -->
     <script src="files/wow.min.js.descarga"></script>
-    <!-- PARTICLE JS -->
     <script src="files/app.js.descarga"></script>
     <script src="files/animated-text.js.descarga"></script>
     <!-- scripts js -->
