--- a/index.html
+++ b/index.html
@@ -500,21 +500,21 @@
 
 
     <!-- LATEST JQUERY -->
-    <script src="files/jquery.min.js.descarga"></script>
+    <script src="files/jquery.min.js"></script>
     <!-- BOOTSTRAP JS -->
-    <script src="files/bootstrap.min.js.descarga"></script>
+    <script src="files/bootstrap.min.js"></script>
     <!-- OWL CAROUSEL JS  -->
-    <script src="files/owl.carousel.min.js.descarga"></script>
+    <script src="files/owl.carousel.min.js"></script>
     <!-- MAGNIFICANT JS -->
-    <script src="files/jquery.magnific-popup.min.js.descarga"></script>
+    <script src="files/jquery.magnific-popup.min.js"></script>
     <!-- STEALLER JS -->
-    <script src="files/jquery.stellar.min.js.descarga"></script>
+    <script src="files/jquery.stellar.min.js"></script>
     <!-- ANIMATION JS -->
-    <script src="files/wow.min.js.descarga"></script>
-    <script src="files/app.js.descarga"></script>
-    <script src="files/animated-text.js.descarga"></script>
+    <script src="files/wow.min.js"></script>
+    <script src="files/app.js"></script>
+    <script src="files/animated-text.js"></script>
     <!-- scripts js -->
-    <script src="files/scripts.js.descarga"></script>
+    <script src="files/scripts.js"></script>
 
 
 
