--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0050)index.html# -->
-<html lang="en" class="gr__wordpressboss_com"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- META -->
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Zenon - Portfolio Template">
-    <meta name="keywords" content="creativepersonal,personal, portfolio new, html, one page, bootstrap, new html template, design, creative, onepage, clean, modern">
-    <meta name="author" content="Tanvir Rahman Hridoy">
+    <meta name="description" content="Danel Ceresa">
+    <meta name="author" content="Danel Ceresa">
     <!-- PAGE TITLE -->
-    <title>Zenon - Portfolio Template</title>
+    <title>Danel Ceresa</title>
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="files/bootstrap.min.css">
     <!-- ALL GOOGLE FONTS -->
@@ -282,47 +281,6 @@
         </div>
     </section>
     <!-- / END START WORK DESIGN AREA -->
-
-    <!-- START COMPANY DESIGN AREA -->
-    <section class="company-logo-area section-padding">
-        <div class="container">
-            <div class="row">
-                <div class="company-logo-list">
-                    <div class="col-sm-4">
-                        <div class="single-company-logo">
-                            <img src="files/c1.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="single-company-logo">
-                            <img src="files/c2.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="single-company-logo">
-                            <img src="files/c3.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="single-company-logo">
-                            <img src="files/c4.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="single-company-logo">
-                            <img src="files/c5.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="single-company-logo">
-                            <img src="files/c6.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- / END COMPANY DESIGN AREA -->
 
 
     <!-- START TESTIMONIAL DESIGN AREA -->
