Add MENU OPtions

--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
         <div class="menu-item-wrap">
             <div class="menu-item-inner">
                 <ul>
-                    <li><a class="smoth-scroll" href="#home">Home</a></li>
                     <li><a class="smoth-scroll" href="#about">About me</a></li>
-                    <li><a class="smoth-scroll" href="#work">Portfolio</a></li>
                     <li><a class="smoth-scroll" href="#testimonial">Testimonial</a></li>
+                    <li><a class="smoth-scroll" href="#skills">Skills</a></li>
+                    <li><a class="smoth-scroll" href="#experience">Experience</a></li>
+                    <li><a class="smoth-scroll" href="#education">Education</a></li>
+                    <li><a class="smoth-scroll" href="#portfolio">Portfolio</a></li>
                     <li><a class="smoth-scroll" href="#contact">Contact</a></li>
                 </ul>
             </div>
