--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <title>Danel Ceresa</title>
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="files/bootstrap.min.css">
-    <!-- ALL GOOGLE FONTS -->
-    <link href="files/css.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700,900" rel="stylesheet">
     <!-- FONT AWESOME CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
@@ -364,6 +363,7 @@
                             <div class="owl-pagination">
                                 <div class="owl-page active"><span class=""></span></div>
                                 <div class="owl-page"><span class=""></span></div>
+                                <div class="owl-page"><span class=""></span></div>
                             </div>
                         </div>
                     </div>
@@ -381,8 +381,8 @@
                     <div class="section-title white-title">
                         <h2>Let’s talk</h2>
                         <p>
-                            Say Hello. If you want to extend some info, do not hesitate to fill this form, we love to
-                            say ‘Hello Mate’.
+                            Say Hello. If you want more information, do not hesitate to fil the form and I will reply
+                            you back.
                         </p>
                     </div>
                 </div>
@@ -392,9 +392,9 @@
                 <div class="col-md-8 col-md-offset-2">
                     <!-- START CONTACT FORM DESIGN AREA -->
                     <div class="contact-form">
-                        <form action="https://formspree.io/arfanhridoy2013@gmail.com" method="POST">
+                        <form action="https://formspree.io/dceresa1988@gmail.com" method="POST">
                             <div class="col-md-6 col-sm-12">
-                                <input type="text" class="form-control" name="cf-name" placeholder="Your Name" required="">
+                                <input type="text" class="form-control" name="name" placeholder="Your Name" required="">
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
@@ -403,11 +403,11 @@
                                 <input type="text" class="form-control" name="subject" placeholder="Your Subject">
                             </div>
                             <div class="col-md-12 col-sm-12">
-                                <textarea class="form-control" rows="6" name="cf-message" placeholder="Your Message"
+                                <textarea class="form-control" rows="6" name="message" placeholder="Your Message"
                                     required=""></textarea>
                             </div>
                             <div class="col-md-12 text-center">
-                                <button type="submit" class="form-control" id="cf-submit" name="submit">Send Message</button>
+                                <button type="submit" class="form-control" id="submit" name="submit">Send Message</button>
                             </div>
                         </form>
                     </div>
